@@ -19,7 +19,8 @@ Done for year
 34. Implement other time precisions.
 35. Improve priniting of multiple values in statement.
 36. Add BCE to Time.
-37.
+37. Add test for lexeme with translation
+38.
 
 Applied
 =======
